@@ -16,80 +16,87 @@
  */
 package org.apache.sis.internal.style;
 
-import java.util.Arrays;
-import java.util.Collection;
+import java.util.List;
 import javax.swing.ImageIcon;
 import org.apache.sis.metadata.iso.citation.DefaultOnlineResource;
 import org.junit.Test;
 import static org.junit.Assert.*;
 
+
 /**
- * Tests for {@link org.apache.sis.internal.style.ExternalGraphic}.
+ * Tests for {@link ExternalGraphic}.
  *
- * @author Johann Sorel (Geomatys)
+ * @author  Johann Sorel (Geomatys)
+ * @version 1.5
+ * @since   1.5
  */
-public class ExternalGraphicTest extends AbstractStyleTests {
+public final class ExternalGraphicTest extends StyleTestCase {
+    /**
+     * Creates a new test case.
+     */
+    public ExternalGraphicTest() {
+    }
 
     /**
-     * Test of OnlineResource methods.
+     * Test of {@code OnlineResource} property.
      */
     @Test
     public void testOnlineResource() {
         ExternalGraphic cdt = new ExternalGraphic();
 
-        //check defaults
-        assertEquals(null, cdt.getOnlineResource());
+        // Check defaults
+        assertEmpty(cdt.getOnlineResource());
 
-        //check get/set
+        // Check get/set
         cdt.setOnlineResource(new DefaultOnlineResource());
-        assertEquals(new DefaultOnlineResource(), cdt.getOnlineResource());
+        assertOptionalEquals(new DefaultOnlineResource(), cdt.getOnlineResource());
     }
 
     /**
-     * Test of InlineContent methods.
+     * Test of {@code InlineContent} property.
      */
     @Test
     public void testInlineContent() {
         ExternalGraphic cdt = new ExternalGraphic();
 
-        //check defaults
-        assertEquals(null, cdt.getInlineContent());
+        // Check defaults
+        assertEmpty(cdt.getInlineContent());
 
-        //check get/set
+        // Check get/set
         ImageIcon value = new ImageIcon();
         cdt.setInlineContent(value);
-        assertEquals(value, cdt.getInlineContent());
+        assertOptionalEquals(value, cdt.getInlineContent());
     }
 
     /**
-     * Test of Format methods.
+     * Test of {@code Format} property.
      */
     @Test
     public void testFormat() {
         ExternalGraphic cdt = new ExternalGraphic();
 
-        //check defaults
-        assertEquals(null, cdt.getFormat());
+        // Check defaults
+        assertEmpty(cdt.getFormat());
 
-        //check get/set
-        cdt.setFormat(SAMPLE_STRING);
-        assertEquals(SAMPLE_STRING, cdt.getFormat());
+        // Check get/set
+        String value = "A random format";
+        cdt.setFormat(value);
+        assertOptionalEquals(value, cdt.getFormat());
     }
 
     /**
-     * Test of ColorReplacements methods.
+     * Test of {@code ColorReplacements} property.
      */
     @Test
     public void testColorReplacements() {
         ExternalGraphic cdt = new ExternalGraphic();
 
-        //check defaults
-        assertEquals(null, cdt.getColorReplacements());
+        // Check defaults
+        assertTrue(cdt.colorReplacements().isEmpty());
 
-        //check get/set
-        Collection<ColorReplacement> value = Arrays.asList(new ColorReplacement());
-        cdt.setColorReplacements(value);
-        assertEquals(value, cdt.getColorReplacements());
+        // Check get/set
+        List<ColorReplacement> value = List.of(new ColorReplacement());
+        cdt.colorReplacements().addAll(value);
+        assertEquals(value, cdt.colorReplacements());
     }
-
 }
